objects/wkitsm__ConfigurationItemRelationshipType__c.object
<CustomObject>
    <description>Relationship type object to store all types of relationships</description>
    <fields>
        <fullName>wkitsm__IsBiDirectional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines the relationship type as Uni or Bi Directional</description>
        <inlineHelpText>Uncheck to set the relationship as Uni-Directional
Check to set the relationship as Bi-Directional</inlineHelpText>
        <label>Bi-Directional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkitsm__SourceToTargetDescription__c</fullName>
        <description>Description of source to target relationship</description>
        <inlineHelpText>Description of source to target relationship</inlineHelpText>
        <label>Source To Target Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__TargetToSourceDescription__c</fullName>
        <description>Description of target to source relationship</description>
        <inlineHelpText>Description of target to source relationship</inlineHelpText>
        <label>Target To Source Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Configuration Item Relationship Type</label>
    <listViews>
        <fullName>wkitsm__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>wkitsm__AllCIRelationshipTypes</fullName>
        <columns>NAME</columns>
        <columns>wkitsm__SourceToTargetDescription__c</columns>
        <columns>wkitsm__TargetToSourceDescription__c</columns>
        <columns>wkitsm__IsBiDirectional__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All CI Relationship Types</label>
    </listViews>
    <nameField>
        <label>CI Relationship Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Item Relationship Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>